rnsc/tests/snapshots/error-lexer-quoted_identifiers-unterminated_string_at_eof.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"This string has no closing quote
----- STDERR -----
[E-001] Error: unterminated quoted identifier
   ╭─[ test_data/rns_integration/error/lexer/quoted_identifiers/unterminated_string_at_eof.rns:2:1 ]
   │
 2 │ "This string has no closing quote
   │ ┬  
   │ ╰── this identifier is not terminated
   │ 
   │ Help: Close the identifier with a '"' on the same line.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-001
───╯
----- JAVAP -----
not generated
