rnsc/tests/snapshots/error-lexer-strings-basic_unterminated_string.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String with no ending quote
.end
----- STDERR -----
[E-001] Error: unterminated string literal
   ╭─[ test_data/integration/error/lexer/strings/basic_unterminated_string.rns:2:1 ]
   │
 2 │ "String with no ending quote
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Help: Close the string with a '"' on the same line.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-001
───╯
----- HASH -----
not generated
