rnsc/tests/snapshots/error-lexer-strings-basic_unterminated_string_werror.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String with no ending quote
.end
----- STDERR -----
Error: unterminated string literal
   ╭─[ test_data/integration/error/lexer/strings/basic_unterminated_string.rns:2:1 ]
   │
 2 │ "String with no ending quote
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
----- HASH -----
not generated
