rnsc/tests/snapshots/error-lexer-strings-escaped_new_line.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String with backslash escape followed by newline \
.end
----- STDERR -----
[E-004] Error: invalid escape sequence
   ╭─[ test_data/integration/error/lexer/strings/escaped_new_line.rns:2:52 ]
   │
 2 │ "String with backslash escape followed by newline \
   │                                                    ┬  
   │                                                    ╰── newline characters cannot be escaped
   │ 
   │ Help: Multiple lines string literals are not supported yet, but are planned for the future.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-004
───╯
----- HASH -----
not generated
